# CircularPotts

./: README.md  main.py  pyproject.toml
src/circularpotts/: angle.py  area.py  hamiltonian.py  main.py  perimeter.py
